# apollon-predict

./: .env.example  .gitignore  MIGRATION_COMPLETE.md  MIGRATION_FINAL.md  MIGRATION_PROGRESS.md  README.md  README2.md  docker-compose.yml  package-lock.json  package.json  pyrightconfig.json  setup.sh  start-api.sh  test_system.py  vercel.json
.github/: SETUP_GUIDE.md
.github/workflows/: ci-cd.yml  deploy-frontend.yml
.sisyphus/drafts/: algorand-to-near-migration.md
.sisyphus/evidence/: task2-intent-types.md  task2-relay-status.json  task3-proof-parsing.txt
.sisyphus/plans/: algorand-to-near-migration.md
backend/: Dockerfile  ml_engine  mock_server.py  requirements.txt
backend/api/: Dockerfile  intents_service.py  package.json  requirements.txt  server.py  zk_integration.py
backend/data-aggregator/: price_aggregator.py  requirements.txt
backend/ml-engine/: __init__.py  adaptive_ensemble.py  advanced_feature_engineering.py  enhanced_oracle_system.py  ensemble_predictor.py  oracle_reputation.py  oracle_validation.py  requirements.txt
backend/oracle-core/: package.json
backend/shade-agent/: Dockerfile  package-lock.json  package.json
contracts/: Dockerfile.builder  build.sh
contracts/publisher/: Cargo.toml
contracts/publisher/src/: lib.rs
contracts/verifier/: Cargo.toml  README.md
contracts/verifier/src/: lib.rs
contracts/verifier/tests/: compatibility.rs
frontend/: oracle-dashboard.html
scripts/: deploy-complete.sh  deploy-contracts.ps1  deploy-contracts.sh  deploy-testnet.ps1  deploy-testnet.sh
sdk/: README.md
sdk/python/: README.md  (+1 more)
(+114 files in other folders)
