[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
num-bigint = "0.4"

# Arkworks for Groth16 verification
ark-groth16 = "0.4.0"
ark-bn254 = { version = "0.4.0", features = ["curve"] }
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true
